--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 {% set site_header_title = 'Yashwin Shetty' %}
 
 <body class="PS-home-bg font-main">
-  <main class="px-4 md:px-4 leading-normal pt-0 pb-16">
+  <main class="px-8 md:px-4 leading-normal pt-0 pb-16">
     <div class="max-w-screen-lg mx-auto">
       <div class="mt-32 text-center">
         <h1 class="text-2xl mb-0">YASHWIN SHETTY</h1>
@@ -14,7 +14,7 @@ layout: layouts/base.njk
           Sports and Exercise Scientist, Strength & Conditioning Coach
         </h2>
         <div class="flex justify-center mb-12">
-          <img src="/static/images/rack.jpg" class="max-w-md" />
+          <img src="/static/images/rack.jpg" class="md:max-w-md" />
         </div>
 
         <div
@@ -41,11 +41,11 @@ layout: layouts/base.njk
           </p>
         </div>
         <div class="mb-24 max-w-md mx-auto">
-          <div class="flex items-center">
+          <div class="md:flex items-center">
             <img
               src="/static/images/yashwin.jpg"
               alt="Yashwin Photo"
-              class="max-w-[170px] mr-8"
+              class="max-w-[170px] mr-8 mb-8 md:mb-0 md:mr-8 rounded"
             />
             <div>
               <div class="flex items-center mb-2">
